# helgoboss-learn-cpp

./: .gitmodules  CMakeLists.txt  README.md  vcpkg.txt
cmake/: helgoboss-learn-config.cmake
include/helgoboss-learn/: MidiClockTransportMessageType.h  Mode.h  ModeProcessor.h  ModeType.h  ReactiveProperty.h  Source.h  SourceCharacter.h  SourceContext.h  SourceProcessor.h  SourceType.h  SourceValue.h  Target.h  TargetCharacter.h  Tempo.h  TempoMessage.h  math-util.h  source-util.h  string-util.h
include/helgoboss-learn/rx/: limit_to_items_like_first_one.h  wait_for_some_more_items.h
src/: MidiClockTransportMessageType.cpp  Mode.cpp  ModeProcessor.cpp  ModeType.cpp  Source.cpp  SourceCharacter.cpp  SourceType.cpp  SourceValue.cpp  Tempo.cpp  math-util.cpp  source-util.cpp  string-util.cpp
test/: CMakeLists.txt  ModeTest.cpp  SourceTest.cpp  TestSourceContext.h  TestTarget.h  math-util-test.cpp
